--- a/style.css
+++ b/style.css
@@ -8,3 +8,15 @@
   box-shadow: none;
   border: none;
 }
+
+.footer-background {
+  background-color: #292929;
+  color: white;
+  height: 400px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.ui.white.link.list{
+  color:white;
+}
